syntax = "proto3";
package messages;

import "google/protobuf/timestamp.proto";
import "messages/user.proto";

enum PRIVACY {
    PRIVATE  = 0;
    EVERYONE = 1;
    PUBLIC   = 2;
}

message Subtitle {
    string lang = 1;
    string file = 2;
}

message Movie {
    string   movie_uri = 1;
    string   poster    = 2;
    int64    size      = 3;
    int64    length    = 4;
    int64    last_played_time   = 5;
    repeated Subtitle subtitles = 6;
}

message Theater {
    string id                   = 1;
    string title                = 2;
    string hash                 = 3;
    PRIVACY privacy             = 4;
    PRIVACY video_player_access = 5;
    string user_id              = 6;
    User user                   = 7;
    Movie movie                 = 8;
    google.protobuf.Timestamp created_at  = 9;
    google.protobuf.Timestamp updated_at  = 10;
}